--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "quill": "^1.3.6",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.13",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
