--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@vueup/vue-quill": "^1.0.0-beta.8",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "quill": "^1.3.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.13",
+    "vuejs-quill": "^1.4.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
