--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.data.rest.basePath=/api
 
 # cf. https://aprogrammers.wordpress.com/2021/11/25/how-tosolvedswagger-ui-not-working/
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+logging.level.org.hibernate.SQL=DEBUG
+
