--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,4 +28,8 @@ spring.data.rest.basePath=/api
 # cf. https://aprogrammers.wordpress.com/2021/11/25/how-tosolvedswagger-ui-not-working/
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.org.hibernate.SQL=DEBUG
+#ajout depuis derniere erreur
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+logging.level.comptoirs=INFO
+logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
 
