--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8989
 spring.sql.init.encoding=UTF-8
 
 # L'URL de la source de données :SGBD H2 en mémoire vive
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 
 # On recrée automatiquement le schéma relationnel à partir des annotations JPA
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -29,7 +29,7 @@ spring.data.rest.basePath=/api
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.org.hibernate.SQL=DEBUG
 #ajout depuis derniere erreur
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
-logging.level.comptoirs=INFO
-logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+#logging.level.comptoirs=INFO
+#logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
 
