--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+edutech.app.jwtSecret=xyxyxy
+edutech.app.jwtExpirationMs=10000
+
 # this configuration needs to correspond to the Vue.js frontends' vue.config.js devServer.proxy.target configuration!
 # otherwise you may experience errors like: Proxy error: Could not proxy request /api/hello from localhost:8080 to http://localhost:8098... (ECONNREFUSED).
 server.port=8989
@@ -7,13 +11,17 @@ server.port=8989
 spring.sql.init.encoding=UTF-8
 
 # L'URL de la source de données :SGBD H2 en mémoire vive
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+
+spring.datasource.driverClassName=org.h2.Driver
 
 # On recrée automatiquement le schéma relationnel à partir des annotations JPA
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # On initialise la BD (data.sql) APRES la création du schéma relationnel
 spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # La console H2 est activée automatiquement si on utilise Spring Boot Dev Tools 
 spring.h2.console.enabled=true
@@ -29,7 +37,4 @@ spring.data.rest.basePath=/api
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.org.hibernate.SQL=DEBUG
 #ajout depuis derniere erreur
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
-#logging.level.comptoirs=INFO
-#logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
 
