--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8989
 spring.sql.init.encoding=UTF-8
 
 # L'URL de la source de données :SGBD H2 en mémoire vive
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.datasource.driverClassName=org.h2.Driver
 
@@ -37,4 +37,4 @@ spring.data.rest.basePath=/api
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.org.hibernate.SQL=DEBUG
 #ajout depuis derniere erreur
-
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
